2016-01-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt, misc/CMakeLists.txt, omp/CMakeLists.txt: Use
	LINK_PRIVATE signature instead of PRIVATE for compatibility with CMake
	< 3.0.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	More include statement adjustments.

	* misc/ldap_connect_auth.c: Use correct path for openvas_string.h.

	* nasl/nasl_grammar.y: Use correct paths for openvas_logging.h and
	openvas_file.h.

	* nasl/exec.c, nasl/genrand.c, nasl/nasl_tree.c: Adjust include
	statements to refer to the system header file and not a non-existing
	local file.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt, misc/CMakeLists.txt, omp/CMakeLists.txt:
	Specify link dependencies in target_link_libraries as private to not
	expose them to the internal link interface and thus prevent internal
	overlinking when linking between submodules.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt: Set linker flags explicitly when building
	binaries.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl.c: Properly include gnutls.h instead of relying on it
	being already included.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Handle include search path more strictly to encourage stronger
	separation of individual submodules and to make dependencies between
	them more visible.

	* misc/CMakeLists.txt, nasl/CMakeLists, omp/CMakeLists.txt: Remove
	relative include_directories commands.

	* misc/openvas_auth.c, misc/plugutils.h, misc/www_funcs.c,
	nasl/capture_packet.c, nasl/charcnv.c, nasl/nasl.c,
	nasl/nasl_builtin_find_service.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_synscan.c,
	nasl/nasl_cert.c, nasl/nasl_cmd_exec.c, nasl/nasl_crypto.c,
	nasl/nasl_crypto2.c, nasl/nasl_debug.c, nasl/nasl_host.c,
	nasl/nasl_http.c, nasl/nasl_init.c, nasl/nasl_misc_funcs.c,